--- a/app/src/main/res/layout/activity_volumenes.xml
+++ b/app/src/main/res/layout/activity_volumenes.xml
@@ -10,4 +10,26 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.marvi.taller_listview.Volumenes">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView9"
+            android:textSize="30sp"
+            android:text="@string/str_Volumenes"
+            android:textAlignment="center"
+            android:textStyle="normal|bold" />
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentTop="true"
+            android:id="@+id/lvVol" />
+    </LinearLayout>
+
 </RelativeLayout>
