--- a/app/src/main/res/layout/activity_volumenes__esfera.xml
+++ b/app/src/main/res/layout/activity_volumenes__esfera.xml
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:ems="10"
-                android:id="@+id/editText" />
+                android:id="@+id/txtRadioEsfera" />
 
             <LinearLayout
                 android:orientation="horizontal"
