--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -10,9 +10,25 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.marvi.taller_listview.Principal">
 
-    <ListView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:id="@+id/lvOpciones" />
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView8"
+            android:textAlignment="center"
+            android:textSize="30sp"
+            android:textStyle="normal|bold"
+            android:text="@string/str_Opciones" />
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:id="@+id/lvOpciones" />
+    </LinearLayout>
+
 </RelativeLayout>
