--- a/app/src/main/res/layout/activity_volumenes__cono.xml
+++ b/app/src/main/res/layout/activity_volumenes__cono.xml
@@ -64,7 +64,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/button3"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:onClick="Limpiar" />
             </LinearLayout>
         </LinearLayout>
 
