--- a/app/src/main/res/layout/activity_volumenes__cubo.xml
+++ b/app/src/main/res/layout/activity_volumenes__cubo.xml
@@ -56,7 +56,8 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/button"
                     android:layout_weight="1"
-                    android:text="@string/str_Limpiar" />
+                    android:text="@string/str_Limpiar"
+                    android:onClick="Limpiar" />
             </LinearLayout>
 
         </LinearLayout>
