--- a/app/src/main/res/layout/activity_areas__circulo.xml
+++ b/app/src/main/res/layout/activity_areas__circulo.xml
@@ -36,7 +36,8 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:ems="10"
-                android:id="@+id/txtRadio" />
+                android:id="@+id/txtRadio"
+                android:hint="@string/str_msjRadio" />
 
             <LinearLayout
                 android:orientation="horizontal"
